object storage 레지스트리 추가 및 코드 정리